crates/core/tests/ui_attr/attr_missing_args.rs
struct Foo;

#[devirt::devirt]
pub trait MissingArgs {
    fn get(&self) -> i32;
}

fn main() {}
